--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.3.1",
 		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-slot": "^1.2.0",
 		"@tailwindcss/vite": "^4.1.4",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
@@ -40,6 +41,7 @@
 		"eslint": "^9.25.1",
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"tw-animate-css": "^1.2.8",
 		"typescript-eslint": "^8.31.0",
 		"vite": "^6.3.3"
 	}
