--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.3.1",
 		"@radix-ui/react-label": "^2.1.4",
-		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.4",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
@@ -26,12 +26,14 @@
 		"lucide-react": "^0.503.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"shared-ui": "github:plexicus/ui-lib#v0.0.3-c",
 		"tailwind-animate": "^0.2.10",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@rollup/plugin-yaml": "^4.1.2",
 		"@stylistic/eslint-plugin": "^4.2.0",
 		"@stylistic/eslint-plugin-jsx": "^4.2.0",
 		"@stylistic/eslint-plugin-ts": "^4.2.0",
