--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,13 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
+    "strictNullChecks": true, // add if using `base` template
+    "allowJs": true, // required, and included with all Astro templates
     "paths": {
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "moduleResolution": "bundler"
   }
 }
