--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"lucide-react": "^0.503.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"shared-ui": "github:plexicus/ui-lib#v0.0.3-c",
+		"shared-ui": "github:plexicus/ui-lib#v0.0.4-b",
 		"tailwind-animate": "^0.2.10",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4",
