--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.503.0",
+		"motion": "^12.19.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"shared-ui": "github:plexicus/ui-lib#v0.0.4-b",
